# jetpack

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  COVERAGE_SUMMARY.md  Cargo.toml  Dockerfile  README.md  SHELL_VS_COMMAND.md  TEST_COVERAGE_PLAN.md  build.rs  build_rs_cov.profraw  rust-toolchain.toml  tarpaulin-report.html  test_inventory.toml  test_move.yml  test_pull.yml  test_pull_with_vars.yml  test_skip_if_exists.yml  version.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_bug_report.md  02_docs_report.md  config.yml
.github/workflows/: ci.yml  pages.yml  release.yml
coverage/: cobertura.xml
crate-examples/: library_usage.rs
docs/: facts_module.md  go.mod  hugo.yaml  reference.json
docs/content/: _index.md
docs/research/: .gitignore
docs/research/provisioning-barrier/python/: README.md  pyproject.toml
docs/research/provisioning-barrier/python/provisioning_barrier/: __init__.py  engine.py  fuzz.py  invariants.py  model.py  policies.py  scheduler.py  simulator.py
docs/research/provisioning-barrier/python/tests/: test_engine.py  test_fuzz.py  test_invariants.py  test_model.py  test_policies.py  test_scheduler.py  test_simulator.py
docs/static/: CNAME
examples/: download_and_unpack.yml  github_release_advanced.yml  move_files.yml
jetpack_examples/: assert_test.yaml  github_release.yml  hello_world.yml  laszoo_test.yml  multi_play_test.yml  pull_test.yml  pull_with_vars.yml
jetporch_examples/playbooks/: retry.yml
proofs/: README.md  secrets_scope.lean  secrets_scope_theory.py
src/: api.rs  config.rs  error.rs  lib.rs  main.rs  main_new.rs  output.rs  runtime.rs  test_support.rs
src/cli/: config_file.rs  confirm.rs  docs.rs  gen_reference.rs  install.rs  mod.rs  parser.rs  playbooks.rs  secrets_diagnostic.rs  show.rs  version.rs
src/connection/: cache.rs  chroot.rs  command.rs  connection.rs  factory.rs  local.rs  mod.rs  no.rs  ssh.rs
src/dns/: gravity.rs  mod.rs  zone.rs
src/docs/: mod.rs  reference.rs
src/handle/: handle.rs  local.rs  mod.rs  remote.rs  response.rs  template.rs
src/inventory/: dependencies.rs  groups.rs  hosts.rs  inventory.rs  loading.rs  mod.rs
src/modules/: mod.rs
src/playbooks/: async_exec.rs  async_ui.rs  barrier.rs  context.rs  context_new.rs  language.rs  mod.rs  provision_phase.rs  ref_collector.rs  role_tree.rs  t_helpers.rs  task_fsm.rs  task_fsm_tests.rs  templar.rs  template_refs.rs  traversal.rs  visitor.rs  visitor_new.rs
src/provisioners/: dragonfly.rs  mod.rs  proxmox_lxc.rs  proxmox_vm.rs
src/registry/: list.rs  mod.rs
src/tasks/: checksum.rs  cmd_library.rs  common.rs  fields.rs  files.rs  logic.rs  logic_tests.rs  mod.rs  request.rs  response.rs
src/util/: io.rs  mod.rs  repo.rs  terminal.rs  yaml.rs
test_inventory/group_vars/: all.yml
tests/: check.rs  dns_repo_root.rs  gravity.rs  integration_tests.rs  library_test.rs  runtime.rs
tests/cli/: mod.rs  show.rs  version.rs
tests/common/: mod.rs
tests/connection/: cache.rs  command.rs  connection.rs  factory.rs  local.rs  ssh.rs
tests/handle/: mod.rs  response.rs  template.rs
tests/integration.bak/: connection_integration.rs  (+1 more)
(+142 files in other folders)
