[project]
name = "provisioning-barrier"
version = "0.1.0"
description = "L4 — scale-fuzz validation of the provisioning-barrier gate (empirical mirror of the Lean proofs)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["provisioning_barrier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RET", "PL"]
ignore = ["PLR2004", "E501"]
